--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -58,7 +58,7 @@
               <div class="row">
                 <div class="col-md-3 produto">
                   <a href="">
-                    <img src="~/Imagens/make.png" width="250px" height="250px">
+                    <img class="col-md-12" src="~/Imagens/make.png" width="250px" height="250px">
                     <h5 class="txtproduto">Sabonete líquido Make out</h5>
                     <h3 class="txtpreco">R$ 15,00</h3>
                   </a>
@@ -66,7 +66,7 @@
                 <br>
                 <div class="col-md-3 produto">
                   <a href="">
-                    <img src="~/Imagens/polvo.png" width="250px" height="250px">
+                    <img class="col-md-12" src="~/Imagens/polvo.png" width="250px" height="250px">
                     <h5 class="txtproduto">Esponja Polvo esfoliante</h5>
                     <h3 class="txtpreco">R$ 6,00</h3>
                   </a>
@@ -74,7 +74,7 @@
                 <br>
                 <div class="col-md-3 produto">
                   <a href="">
-                    <img src="~/Imagens/paleta.png" width="250px" height="250px">
+                    <img class="col-md-12" src="~/Imagens/paleta.png" width="250px" height="250px">
                     <h5 class="txtproduto">Paleta The Flowers</h5>
                     <h3 class="txtpreco">R$ 19,00</h3>
                   </a>
@@ -82,7 +82,7 @@
                 <br>
                 <div class="col-md-3 produto">
                   <a href="">
-                    <img src="~/Imagens/torre.png" width="250px" height="250px">
+                    <img class="col-md-12" src="~/Imagens/torre.png" width="250px" height="250px">
                     <h5 class="txtproduto">Torre Neon</h5>
                     <h3 class="txtpreco">R$ 20,00</h3>
                   </a>
@@ -97,7 +97,7 @@
               <div class="row">
                 <div class="col-md-3 produto">
                   <a href="">
-                    <img src="~/Imagens/bruma.png" width="250px" height="250px">
+                    <img  class="col-md-12" src="~/Imagens/bruma.png" width="250px" height="250px">
                     <h5 class="txtproduto">Make</h5>
                     <h3 class="txtpreco">R$ 30,00</h3>
                   </a>
@@ -105,7 +105,7 @@
                 <br>
                 <div class="col-md-3 produto">
                   <a href="">
-                    <img src="~/Imagens/faixa.png" width="250px" height="250px">
+                    <img  class="col-md-12" src="~/Imagens/faixa.png" width="250px" height="250px">
                     <h5 class="txtproduto">Faixa de maquiagem</h5>
                     <h3 class="txtpreco">R$ 12,00</h3>
                   </a>
@@ -113,7 +113,7 @@
                 <br>
                 <div class="col-md-3 produto">
                   <a href="">
-                    <img src="~/Imagens/make.png" width="250px" height="250px">
+                    <img class="col-md-12" src="~/Imagens/make.png" width="250px" height="250px">
                     <h5 class="txtproduto">Make</h5>
                     <h3 class="txtpreco">R$ 30,00</h3>
                   </a>
@@ -121,7 +121,7 @@
                 <br>
                 <div class="col-md-3 produto">
                   <a href="">
-                    <img src="~/Imagens/make.png" width="250px" height="250px">
+                    <img  class="col-md-12" src="~/Imagens/make.png" width="250px" height="250px">
                     <h5 class="txtproduto">Make</h5>
                     <h3 class="txtpreco">R$ 30,00</h3>
                   </a>
